trunk/Archive2/9e/a1d8bec3751564/output
main.cpp:5:53: error: base class 'std::streambuf' (aka 'basic_streambuf<char>') has private copy constructor
    mystreambuf(const std::streambuf& other) : std::streambuf(other)
                                                    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/streambuf:802:7: note: declared private here
      basic_streambuf(const basic_streambuf& __sb)
      ^
1 error generated.
